# AutoWriterLLM

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  chat_client.py  config.yaml.example  pyproject.toml  readthedocs.yml  requirements.txt  run_gui.py  setup_environment.cmd  setup_environment.sh  test_chat_client.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  autowriterllm.rst  conf.py  contributing.rst  enhanced_prompt_template.md  example_enhanced_prompt.md  example_prompt.md  example_toc.md  example_toc_summary.md  history.rst  index.rst  installation.rst  make.bat  modules.rst  prompt_template.md  requirements.txt  simple_prompt_example.md  simple_prompt_template.md  usage.rst
pyqt/: book_summary.md  chapter-1-1-1.md  chapter-1-1-2.md  chapter-1-1-3.md  chapter-1-1-4.md  chapter-1-1-5.md  chapter-1.md  chapter-2-2-1.md  chapter-2-2-2.md  chapter-2-2-3.md  chapter-2-2-4.md  chapter-2.md  chapter-3-3-1.md  chapter-3-3-2.md  chapter-3-3-3.md  chapter-3.md  chapter-4-4-1.md  chapter-4-4-2.md  chapter-4-4-3.md  chapter-4.md  chapter-5-5-1.md  chapter-5-5-2.md  chapter-5.md  chapter-6-6-1.md  chapter-6-6-2.md  chapter-6-6-3.md  chapter-6.md  table_of_contents.md
pyqt/vector_dbs/: chroma.sqlite3
src/autowriterllm/: __init__.py  __main__.py  ai_content_generator.py  api_client.py  cache.py  code_quality.py  context_management.py  exceptions.py  gui.py  interactive.py  knowledge_graph.py  learning_path.py  markdown_to_pdf_converter.py  models.py  review.py
tests/: __init__.py  test_ai_content_generator.py  test_autowriterllm.py  test_content_quality.py  test_interactive.py  test_learning_path.py  test_review.py
